@@ -87,6 +87,18 @@ void ProgramCtx::setupRegistryPluginContainer(
   _pluginContainer = pluginContainer;
 }
 
+ASPSolverManager::SoftwareConfigurationPtr
+ProgramCtx::getASPSoftware() const
+{
+  assert(aspsoftware != 0);
+  return aspsoftware;
+}
+
+void ProgramCtx::setASPSoftware(ASPSolverManager::SoftwareConfigurationPtr software)
+{
+  aspsoftware = software;
+}
+
 #if 0
 
 void
@@ -169,18 +181,6 @@ ProgramCtx::setDependencyGraph(DependencyGraph* dg)
     }
 }
 
-ASPSolverManager::SoftwareConfigurationPtr
-ProgramCtx::getASPSoftware() const
-{
-  assert(aspsoftware != 0);
-  return aspsoftware;
-}
-
-void
-ProgramCtx::setASPSoftware(ASPSolverManager::SoftwareConfigurationPtr software)
-{
-  aspsoftware = software;
-}
 
 
 ResultContainer*
